[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bairry"
version = "0.1.0"
description = "Song matching web service based on genre and lyrical similarity"
requires-python = ">=3.11"
authors = [{name = "Bairry Team"}]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pgvector==0.2.1",
    "sentence-transformers==2.2.2",
    "scikit-learn==1.3.2",
    "musicbrainzngs==0.7.1",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.0",
]

[tool.setuptools]
packages = ["bairry"]

[tool.setuptools.package-data]
bairry = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
